# triton

./: .gitignore  BENCHMARK_REPORT.txt  LICENSE  README.md  ais_simulator.py  benchmark.py  geofences.py  integration.py  perimeter_engine.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
convoy_escort/: BUILD_PLAN.md  HCTIP_BUILD_PLAN.md  README.md  triton-dashboard-v10.html  update_march20.py
convoy_escort/backend/: data_integration.py  main.py  requirements.txt
docs/: FALSE_POSITIVES.md  ON_DEVICE_NUMBERS.md
edge/: BENCHMARK_REPORT_EDGE.txt  audio_anomaly.py  audio_cnn.py  cross_camera_tracker.py  edge_benchmark.py  jetson_runtime.py  multi_camera_manager.py  person_detector.py  reid_embedder.py  reliability.py  rtsp_ingest.py  vision_perimeter.py
tests/: test_engines.py
