[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-perimeter"
version = "1.0.0"
description = "Multi-modal edge perimeter stack — AIS, vision (YOLO+RTSP), and acoustic anomaly detection on the unified TRITON alert bus"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Nahom Woldegebriel" },
]
keywords = [
    "perimeter-detection",
    "intrusion-detection",
    "yolo",
    "ais",
    "edge-ai",
    "jetson",
    "tensorrt",
    "streaming",
    "geofence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "shapely>=2.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "librosa>=0.10.0",
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100.0", "uvicorn>=0.23.0"]
test = ["pytest>=7.0.0"]

[project.urls]
Repository = "https://github.com/nahomar/triton-perimeter"

[tool.setuptools]
py-modules = [
    "geofences",
    "perimeter_engine",
    "ais_simulator",
    "integration",
    "benchmark",
]

[tool.setuptools.packages.find]
include = ["edge*"]
